testing/errors/nopseudopccontext1.a
	*=$1000
label		nop
	a = &label	; -> "Un-pseudopc operator '&' has no !pseudopc context."
